--- a/0_javascript_pratice/src/main/webapp/index_parameter.html
+++ b/0_javascript_pratice/src/main/webapp/index_parameter.html
@@ -7,6 +7,12 @@
 <body>
 
 <script>
+		//변수 Hoisting
+		//변수의 선언을 변수 범위 맨위로 끌고오는 현상
+		// var age = 29;
+		var age;
+		
+		console.log(age);
 
 		var name = 'park';
 		var name = 'moon';
@@ -20,6 +26,10 @@
 		name1 = 'park';
 		
 		const name2 = 'park';
+		
+		
+		age = 29;
+		console.log(age);
 	
 </script>
 
