--- a/0_javascript_pratice/src/main/webapp/index_char.html
+++ b/0_javascript_pratice/src/main/webapp/index_char.html
@@ -30,10 +30,29 @@
 	function 해체분석기(문자, 변수){
 		console.log(문자);
 		console.log(변수);
-		
 	}
 	
 	해체분석기`안녕하세요 ${변수} 입니다`
+	
+	
+	var pants = 0;
+	var socks = 100;
+	
+	function 해체분석기1(문자, 변수1, 변수2){
+		console.log(문자[1] + 변수1 + 문자[0] + 변수2)
+	}
+	
+	해체분석기1`바지${pants} 양말${socks}`;
+	
+	function 해체분석기2(문자, 변수1, 변수2){
+		if(변수1 == 0){
+			console.log(`바지 다 팔렸어요 양말` + 변수2);
+		}
+	}
+	
+	해체분석기2`바지${pants} 양말${socks}`;
+	
+	
 	
 	</script>
 
